# Graphics

Lab1/: 312_Kutsenko_1.docx  main.cpp
Lab2/: 312_Kutsenko_2.docx  README.md  main.cpp
Lab3/: main.cpp
Lab4/: 312_Kutsenko_4.docx  README.md  main.cpp
Lab5/: 312_Kutsenko_5.docx  CMakeLists.txt  README.md  main.cpp
Lab5/include/: camera.hpp  cube.hpp  light.hpp  plane.hpp  ppm.hpp  raytracer.hpp  sphere.hpp  vector3.hpp
Lab5/src/: camera.cpp  cube.cpp  light.cpp  plane.cpp  ppm.cpp  raytracer.cpp  sphere.cpp  vector3.cpp
Lab6/: 312_Kutsenko_6.docx  CMakeLists.txt  config.json  drawer.cpp  main.cpp  main_2.cpp  main_4.cpp  parse_obj_dumb.cpp  scene_loader.cpp  scene_loader_old.cpp
Lab6/assets/shaders/: default.frag
Lab6/bs_reports/: .~lock.TODO.docx#  TODO.docx
Lab6/include/: Camera.h  Camera.hpp  EBO.h  Mesh.h  Mesh.hpp  Scene.hpp  VBO.hpp  parse_obj.hpp
Lab6/src/: Camera.cpp  Mesh.cpp  Scene.cpp  parse_obj.cpp
